Fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&family=Noto+Sans:wght@300&display=swap');
+
 body{
+  font-family: 'Noto Sans', sans-serif;
   background: linear-gradient(rgba(37, 5, 49, 0.7), rgba(93, 41, 114, 0.7)), url(assets/mainbg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
